2004-02-26  Gary Thomas  <gary@mlbassoc.com>

	* misc/redboot_BOOT.ecm: 
	* cdl/hal_powerpc_moab.cdl: Use HAL_PLATFORM_EXTRA to display operating
	mode of RedBoot (BOOT, NAND FLASH or RAM)

2004-02-25  Gary Thomas  <gary@mlbassoc.com>

	* misc/redboot_RAM+FLASH.ecm: Remove FIS - can't be supported in
	this configuration.

2003-12-08  Gary Thomas  <gary@mlbassoc.com>

	* src/moab.S: Fix cycle time on NAND FLASH.

2003-10-15  Gary Thomas  <gary@mlbassoc.com>

	* cdl/hal_powerpc_moab.cdl: Remove [unused] tests so "make tests" works.

2003-10-09  Gary Thomas  <gary@mlbassoc.com>

	* include/plf.inc: Define vector 0, to make ROMRAM mode program startup
	safer (don't need to remember the "-e XXX" option)

2003-10-03  Gary Thomas  <gary@mlbassoc.com>

	* src/hal_aux.c (hal_platform_init): Better/different ESA computation,
	using only 16 unique bits.

2003-10-02  Gary Thomas  <gary@mlbassoc.com>

	* src/hal_aux.c: 
	* cdl/hal_powerpc_moab.cdl: Add code to set and check ethernet station
	addresses, based on CPU serial number.  Force RedBoot to validate them.

2003-09-30  Gary Thomas  <gary@mlbassoc.com>

	* include/plf_io.h (CYGARC_VIRTUAL_ADDRESS): Added.
	Scan all possible PCI slots.

2003-09-28  Gary Thomas  <gary@mlbassoc.com>

	* cdl/hal_powerpc_moab.cdl: Remove conflicting constraint - prevented
	non-RedBoot builds.

2003-09-26  Gary Thomas  <gary@mlbassoc.com>

	* include/plf_io.h: PCI IRQ mapping is platform dependent - moved here.

2003-09-24  Gary Thomas  <gary@mlbassoc.com>

	* src/moab.S: Disable GPIO16 (watchdog timer) as output by default.

2003-09-22  Gary Thomas  <gary@mlbassoc.com>

	* cdl/hal_powerpc_moab.cdl: Need to force 'fconfig' since that is now
	optional in RedBoot.

2003-09-21  Gary Thomas  <gary@mlbassoc.com>

	* misc/redboot_BOOT.ecm: 
	* misc/redboot_RAM+FLASH.ecm: 
	* misc/redboot_RAM.ecm: 
	* misc/redboot_ROM.ecm: 
	* misc/redboot_ROMRAM.ecm:  Adjust for changes in RedBoot
	template - DNS now must be enabled manually.
